# accounts.comame.xyz

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  clippy.out  deploy.json  entrypoint  go.mod  go.sum  go.work  go.work.sum  main.go  main_test.go  package-lock.json  package.json  prebuild.sh  tables.sql
auth/: authentication.go  password.go
dashboard/: authorization.go  go.mod  go.sum  handler.go  lib.go  main.go  relying_party.go  role.go  user.go
db/: authentication.go  db.go
front/: out.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  webpack.config.js
gosrc/: go.mod  go.sum  main.go
http/: Cargo.toml
jwt/: jwt.go  jwt_test.go
kvs/: external_login_session.go  kvs.go  redis.go
oidc/: access_token.go  authentication_request.go  authentication_response.go  code_request.go  discovery.go  federate.go  post_authentication.go  pre_authenticate.go  userinfo_request.go
scripts/: calc_password_hash.go  dev-sql  dev_db.sh  migration  rotate_keypair.go  setup_default.go  test-single-thread  test_env.sh
sql/: 000-init.sql  001-tables.sql  002-add-jwt-log.sql  003-remove-external-session.sql  004-create-table-user-binding.sql  005-alter-authentication-failures-add-remote-addr.sql  006-alter-idtoken-issues-add-remote-addr copy.sql  007-create-table-access-tokens.sql  008-create-table-userinfo.sql  009-create-table-federated-user-binding.sql  010-create-table-op-user.sql  011-create-role.sql  schemas.sql
src/: mail.rs  main.rs  static_file.rs  time.rs
static/: callback.html  certs.json  (+13 more)
(+391 files in other folders)
