[package]
name = "id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
hyper = { version = "0.14.20", features = [ "full" ] }
mysql = "22.2.0"
once_cell = "1.15.0"
openssl = { version = "0.10.42", features = [ "vendored" ] }
redis = "0.21.6"
serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = [ "full" ] }
